# Rahas

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  vaultkeeper.db
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  audit.py  auth.py  dashboard.py  import_export.py  notifications.py  profile.py  secrets.py  sharing.py  tags.py  teams.py  tools.py  travel.py  vaults.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  audit.py  notification.py  organization.py  secret.py  sharing.py  tag.py  user.py  vault.py
backend/app/schemas/: admin.py  auth.py  notification.py  profile.py  secret.py  sharing.py  tag.py  tools.py  vault.py
backend/app/services/: audit_service.py  auth_service.py  checkpost_service.py  notification_service.py  policy_service.py  secret_service.py  sharing_service.py  tag_service.py  vault_service.py
backend/app/tasks/: __init__.py  cleanup.py  notifications.py  rotation_reminders.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_phase1_foundation.py  003_phase2_indexes.py
backend/tests/: conftest.py
backend/tests/security/: test_auth_security.py
backend/tests/unit/: test_security.py  test_tools.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/crypto/: encryption.ts  keyDerivation.ts  keyHierarchy.ts  memoryGuard.ts  sharing.ts
nginx/: nginx.conf
(+62 files in other folders)
